# cppgamedev

./: .clang-tidy  .gitignore  CMakeLists.txt  Changelog.MD  conanfile.txt  cppgamedev.sublime-project
.github/workflows/: build_cmake.yml
assets/: characters.pdn  characters_on_white.pdn  inconsolata.fnt  main.lua  ui_pixel.hlsl  ui_vertex.hlsl
src/: CMakeLists.txt  GameApp.cpp  GameApp.hpp  UIRenderer.cpp  UIRenderer.h  main.cpp
